infra/common/keycloak/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-tls-redirect
spec:
  parentRefs:
    - name: nginx
      namespace: default
      sectionName: gateway-http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
spec:
  parentRefs:
    - name: nginx
      namespace: default
      sectionName: gateway-https
  rules:
    - backendRefs:
        - name: keycloak
          port: 8080
